--- a/Game.html
+++ b/Game.html
@@ -10,6 +10,10 @@
 	<script src="libs/kineticjs/kinetic.min.js"></script>
 	<script src="libs/jquery/jquery-1.10.1.min.js"></script>
 	<script src="scripts/Game.js"></script>	
+	<script src="scripts/Player.js"></script>	
+	<script src="scripts/Bullets.js"></script>
+	<script src="scripts/Enemies.js"></script>
+	<script src="scripts/Movement.js"></script>
 </body>
 
 </html>
