--- a/Game.html
+++ b/Game.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<title>Canvas game</title>
@@ -14,6 +14,7 @@
 	<script src="scripts/Bullets.js"></script>
 	<script src="scripts/Enemies.js"></script>
 	<script src="scripts/Movement.js"></script>
+	<script src="scripts/Score.js"></script>
 </body>
 
 </html>
