--- a/Game.html
+++ b/Game.html
@@ -16,6 +16,7 @@
 	<script src="scripts/Movement.js"></script>
 	<script src="scripts/enemyBullets.js"></script>
 	<script src="scripts/Score.js"></script>
+	<script src="scripts/Bonus.js"></script>
 </body>
 
 </html>
