added main-menu with logo & buttons

--- a/gameover.html
+++ b/gameover.html
@@ -9,6 +9,9 @@
 
 			background-position:center; 
 			}
+		path{
+			stroke-width: 5px;
+		}
 		.retry-button {
 			-moz-box-shadow:inset 0px 1px 0px 0px #bbdaf7;
 			-webkit-box-shadow:inset 0px 1px 0px 0px #bbdaf7;
@@ -118,84 +121,84 @@
      id="layer1"
      transform="translate(0,-452.36218)">
     <path
-       style="fill:none;stroke:#fffcfc;stroke-width:0.69750363px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+       style="fill:none;stroke:#fffcfc;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
        d="m 469.78323,501.8199 -122.67826,-0.91456 0,169.19183 121.5926,0 0,-84.13863 -51.13458,-0.32335"
        id="path3785"
        inkscape:connector-curvature="0"
        sodipodi:nodetypes="cccccc" />
     <path
-       style="fill:none;stroke:#fffcfc;stroke-width:0.69750363px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+       style="fill:none;stroke:#fffcfc;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
        d="m 417.17917,585.25637 -10.36354,26.30958 44.07317,0"
        id="path3797"
        inkscape:connector-curvature="0"
        sodipodi:nodetypes="ccc" />
     <path
-       style="fill:none;stroke:#fffcfc;stroke-width:0.69750363px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+       style="fill:none;stroke:#fffcfc;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
        d="m 450.75711,611.28856 -5.9438,46.00491"
        id="path3799"
        inkscape:connector-curvature="0"
        sodipodi:nodetypes="cc" />
     <path
-       style="fill:none;stroke:#fffcfc;stroke-width:0.69750363px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+       style="fill:none;stroke:#fffcfc;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
        d="M 445.14258,657.61681 372.07489,651.80616 371.37307,527.8616"
        id="path3803"
        inkscape:connector-curvature="0"
        sodipodi:nodetypes="ccc" />
     <path
-       style="fill:none;stroke:#fffcfc;stroke-width:0.69750363px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+       style="fill:none;stroke:#fffcfc;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
        d="m 370.98923,527.4273 83.59492,5.48731 15.19908,-31.09472"
        id="path3807"
        inkscape:connector-curvature="0"
        sodipodi:nodetypes="ccc" />
     <path
-       style="fill:none;stroke:#fffcfc;stroke-width:0.69750363px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+       style="fill:none;stroke:#fffcfc;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
        d="m 499.63855,669.18263 27.14122,-167.36273 52.65394,0 15.19906,201.20109 -32.02662,1.37182 4.3426,-114.77608 -33.11227,0.91455 -13.02779,78.65135 z"
        id="path3850"
        inkscape:connector-curvature="0" />
     <path
-       style="fill:none;stroke:#fffcfc;stroke-width:0.69750363px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+       style="fill:none;stroke:#fffcfc;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
        d="m 541.97883,527.4273 -5.97106,32.92383 39.08333,-0.45728 z"
        id="path3852"
        inkscape:connector-curvature="0" />
     <path
-       style="fill:none;stroke:#fffcfc;stroke-width:0.69750363px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+       style="fill:none;stroke:#fffcfc;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
        d="m 641.3862,501.0163 -20.62733,164.61908 49.397,0 5.97107,-123.46431 36.36921,81.39499 24.99719,-65.18355 4.31531,109.53925 48.85418,-9.14552 -30.94099,-163.24725 -27.14119,0.91456 -18.56046,63.62067 -47.91154,-59.37127 z"
        id="path3856"
        inkscape:connector-curvature="0"
        sodipodi:nodetypes="ccccccccccccc" />
     <path
-       style="fill:none;stroke:#fffcfc;stroke-width:0.69750363px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+       style="fill:none;stroke:#fffcfc;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
        d="m 833.49543,501.99528 -12.28268,161.02452 108.24137,-11.64033 -0.76771,-31.04086 -78.30222,14.22707 18.42401,-55.6149 52.20154,-4.52679 -13.05039,-18.10718 -47.59545,3.88011 7.67667,-45.91462 46.82782,5.82016 -7.67667,-31.68756 z"
        id="path3858"
        inkscape:connector-curvature="0" />
     <path
-       style="fill:none;stroke:#fffcfc;stroke-width:0.69750363px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+       style="fill:none;stroke:#fffcfc;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
        d="m 347.10497,753.32126 -8.68519,169.19182 136.79168,-13.71827 -18.45601,-172.85 z"
        id="path3862"
        inkscape:connector-curvature="0" />
     <path
-       style="fill:none;stroke:#fffcfc;stroke-width:0.69750363px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+       style="fill:none;stroke:#fffcfc;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
        d="m 399.21609,777.09958 -35.8264,93.28413 68.39584,10.06006 14.11343,-71.33493 z"
        id="path3864"
        inkscape:connector-curvature="0" />
     <path
-       style="fill:none;stroke:#fffcfc;stroke-width:0.69750363px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+       style="fill:none;stroke:#fffcfc;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
        d="m 505.60962,741.4321 42.34028,168.27727 54.28241,-0.91456 32.56945,-171.0209 -61.88195,0.91455 4.34259,147.24262 -42.34028,-166.44819 z"
        id="path3868"
        inkscape:connector-curvature="0" />
     <path
-       style="fill:none;stroke:#fffcfc;stroke-width:0.69750363px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+       style="fill:none;stroke:#fffcfc;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
        d="m 685.24388,741.78862 -12.28268,161.02449 108.24133,-11.6403 -0.7677,-31.04088 -78.30219,14.22708 18.42401,-55.6149 52.20151,-4.52678 -13.05036,-18.10719 -47.59545,3.88012 7.67667,-45.91462 46.8278,5.82016 -7.67665,-31.68756 z"
        id="path3858-1"
        inkscape:connector-curvature="0" />
     <path
-       style="fill:none;stroke:#fffcfc;stroke-width:0.69750363px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+       style="fill:none;stroke:#fffcfc;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
        d="m 828.04715,713.99559 -6.51389,190.2265 45.59723,-21.03466 -14.11342,-76.82223 13.02777,0 71.65288,94.19869 51.02546,-1.82911 -95.53714,-132.60981 11.94216,-43.89843 z"
        id="path3918"
        inkscape:connector-curvature="0"
        sodipodi:nodetypes="cccccccccc" />
     <path
-       style="fill:none;stroke:#fffcfc;stroke-width:0.82975036px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+       style="fill:none;stroke:#fffcfc;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
        d="m 849.82131,763.46284 -2.16045,-24.7137 28.70726,0.1787 -2.78183,27.13644 z"
        id="path3924"
        inkscape:connector-curvature="0"
