--- a/victory.html
+++ b/victory.html
@@ -9,6 +9,9 @@
 
 			background-position:center; 
 			}
+		path{
+			stroke-width: 5px;	
+		}
 		.retry-button {
 			-moz-box-shadow:inset 0px 1px 0px 0px #bbdaf7;
 			-webkit-box-shadow:inset 0px 1px 0px 0px #bbdaf7;
@@ -116,49 +119,49 @@
      id="layer1"
      transform="translate(0,-452.36218)">
     <path
-       style="fill:none;stroke:#ffffff;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+       style="fill:none;stroke:#ffffff;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
        d="m 705.71429,522.36219 -11.42857,264.2857 180,-21.4286 -24.28571,-269.99996 z"
        id="path3862"
        inkscape:connector-curvature="0" />
     <path
-       style="fill:none;stroke:#ffffff;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+       style="fill:none;stroke:#ffffff;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
        d="m 774.28572,559.50505 -47.14286,145.71428 90,15.71429 18.57143,-111.42857 z"
        id="path3864"
        inkscape:connector-curvature="0" />
     <path
-       style="fill:none;stroke:#ffffff;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+       style="fill:none;stroke:#ffffff;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
        d="M 54.28572,518.07647 110,780.9336 l 71.42857,-1.4286 42.85715,-267.14281 -81.42857,1.42857 5.71428,230 -55.71428,-260 z"
        id="path3868"
        inkscape:connector-curvature="0" />
     <path
-       style="fill:none;stroke:#ffffff;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+       style="fill:none;stroke:#ffffff;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
        d="m 912.85715,496.6479 -8.57143,297.14287 60,-32.85715 -18.57142,-120 17.14285,0 94.28585,147.14286 67.1428,-2.85715 -125.71436,-207.14286 15.71436,-68.57143 z"
        id="path3918"
        inkscape:connector-curvature="0"
        sodipodi:nodetypes="cccccccccc" />
     <path
-       style="fill:none;stroke:#ffffff;stroke-width:1.18960011000000000px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+       style="fill:none;stroke:#ffffff;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
        d="m 941.50911,573.9181 -2.84287,-38.60397 37.77501,0.27912 -3.66053,42.38842 z"
        id="path3924"
        inkscape:connector-curvature="0"
        sodipodi:nodetypes="ccccc" />
     <path
-       style="fill:none;stroke:#ffffff;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+       style="fill:none;stroke:#ffffff;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
        d="M 274.28571,516.6479 270,778.07647 328.57143,770.93361 291.42857,516.6479 z"
        id="path3974"
        inkscape:connector-curvature="0" />
     <path
-       style="fill:none;stroke:#ffffff;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+       style="fill:none;stroke:#ffffff;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
        d="M 491.42857,556.6479 480,515.21933 l -90,7.14286 -31.42857,248.57143 140,2.85714 14.28572,-54.28572 -38.57143,-11.42857 -10,38.57143 -67.14286,-5.71428 27.14286,-191.42858 z"
        id="path3976"
        inkscape:connector-curvature="0" />
     <path
-       style="fill:none;stroke:#ffffff;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+       style="fill:none;stroke:#ffffff;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
        d="m 518.57143,526.6479 5.71429,38.57142 70,-2.85714 -17.14286,224.28572 58.57143,-18.57143 -20,-204.28572 55.71429,12.85715 -15.71429,-58.57143 z"
        id="path3978"
        inkscape:connector-curvature="0" />
     <path
-       style="fill:none;stroke:#ffffff;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
+       style="fill:none;stroke:#ffffff;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
        d="m 1088.5715,523.79076 9.9999,62.85714 45.7143,41.42857 15.7143,160 75.7143,5.71429 -50,-160 54.2857,-45.71429 4.2857,-80 -42.8571,18.57143 -12.8572,58.57143 -22.8571,17.14286 -31.4286,-32.85715 L 1130,502.36219 z"
        id="path3980"
        inkscape:connector-curvature="0" />
