Fixed background on how-to page, added link on main page

--- a/howtopage.html
+++ b/howtopage.html
@@ -5,7 +5,7 @@
 	<title>How To Play</title>
 	<style type="text/css">
 		body{
-			background-image: url('images/mainbgTest1.jpg');
+			background-image: url('images/mainbg-how-to.jpg');
 
 			background-position:center; 
 			}
