--- a/mainpage.html
+++ b/mainpage.html
@@ -269,7 +269,7 @@
 
 	</div>
 	<a href="Game.html" class="retry-button">Start New Game</a>
-	<a href="#" class="how-to-button">How to Play</a>
+	<a href="howtopage.html" class="how-to-button">How to Play</a>
 	<a href="#" class="mp-button">Multiplayer</a>
 	<script>
 		var container = document.getElementById('svg-container');
