Change in styles - now we have separated CSS file Cut unnecessary code.

--- a/victory.html
+++ b/victory.html
@@ -2,178 +2,28 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Victory Screen</title>
-	<style type="text/css">
-		body{
-			background-image: url('images/victory.jpg');
-
-			background-position:center; 
-			}
-		path{
-			stroke-width: 5px;	
-		}
-		.retry-button {
-			-moz-box-shadow:inset 0px 1px 0px 0px #bbdaf7;
-			-webkit-box-shadow:inset 0px 1px 0px 0px #bbdaf7;
-			box-shadow:inset 0px 1px 0px 0px #bbdaf7;
-			background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #79bbff), color-stop(1, #378de5) );
-			background:-moz-linear-gradient( center top, #79bbff 5%, #378de5 100% );
-			filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#79bbff', endColorstr='#378de5');
-			background-color:#79bbff;
-			-webkit-border-top-left-radius:37px;
-			-moz-border-radius-topleft:37px;
-			border-top-left-radius:37px;
-			-webkit-border-top-right-radius:0px;
-			-moz-border-radius-topright:0px;
-			border-top-right-radius:0px;
-			-webkit-border-bottom-right-radius:37px;
-			-moz-border-radius-bottomright:37px;
-			border-bottom-right-radius:37px;
-			-webkit-border-bottom-left-radius:0px;
-			-moz-border-radius-bottomleft:0px;
-			border-bottom-left-radius:0px;
-			text-indent:0;
-			border:1px solid #84bbf3;
-			display:inline-block;
-			color:#ffffff;
-			font-family:Verdana;
-			font-size:15px;
-			font-weight:bold;
-			font-style:normal;
-			height:65px;
-			line-height:65px;
-			width:143px;
-			text-decoration:none;
-			text-align:center;
-			text-shadow:1px 1px 0px #528ecc;
-			position:relative;
-			left:570px;
-			bottom: 100px;
-		}
-		.retry-button:hover {
-			background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #378de5), color-stop(1, #79bbff) );
-			background:-moz-linear-gradient( center top, #378de5 5%, #79bbff 100% );
-			filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#378de5', endColorstr='#79bbff');
-			background-color:#378de5;
-		}
-</style>
+	<title>You won!</title>
+  <link href="styles/style.css" rel="stylesheet" />
 </head>
-<body>
+<body id="victory">
 	<div id="svg-container">
-
-	<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<!-- Created with Inkscape (http://www.inkscape.org/) -->
-
-<svg
-   xmlns:dc="http://purl.org/dc/elements/1.1/"
-   xmlns:cc="http://creativecommons.org/ns#"
-   xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
-   xmlns:svg="http://www.w3.org/2000/svg"
-   xmlns="http://www.w3.org/2000/svg"
-   xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
-   xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
-   width="1280"
-   height="600"
-   id="svg2"
-   version="1.1"
-   inkscape:version="0.48.4 r9939"
-   sodipodi:docname="victory white.svg">
-  <defs
-     id="defs4" />
-  <sodipodi:namedview
-     id="base"
-     pagecolor="#ffffff"
-     bordercolor="#666666"
-     borderopacity="1.0"
-     inkscape:pageopacity="0.0"
-     inkscape:pageshadow="2"
-     inkscape:zoom="0.7"
-     inkscape:cx="548.11946"
-     inkscape:cy="401.37241"
-     inkscape:document-units="px"
-     inkscape:current-layer="layer1"
-     showgrid="false"
-     inkscape:window-width="1440"
-     inkscape:window-height="838"
-     inkscape:window-x="-8"
-     inkscape:window-y="-8"
-     inkscape:window-maximized="1"
-     showguides="true"
-     inkscape:guide-bbox="true"
-     width="1280px" />
-  <metadata
-     id="metadata7">
-    <rdf:RDF>
-      <cc:Work
-         rdf:about="">
-        <dc:format>image/svg+xml</dc:format>
-        <dc:type
-           rdf:resource="http://purl.org/dc/dcmitype/StillImage" />
-        <dc:title></dc:title>
-      </cc:Work>
-    </rdf:RDF>
-  </metadata>
-  <g
-     inkscape:label="Layer 1"
-     inkscape:groupmode="layer"
-     id="layer1"
-     transform="translate(0,-452.36218)">
-    <path
-       style="fill:none;stroke:#ffffff;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
-       d="m 705.71429,522.36219 -11.42857,264.2857 180,-21.4286 -24.28571,-269.99996 z"
-       id="path3862"
-       inkscape:connector-curvature="0" />
-    <path
-       style="fill:none;stroke:#ffffff;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
-       d="m 774.28572,559.50505 -47.14286,145.71428 90,15.71429 18.57143,-111.42857 z"
-       id="path3864"
-       inkscape:connector-curvature="0" />
-    <path
-       style="fill:none;stroke:#ffffff;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
-       d="M 54.28572,518.07647 110,780.9336 l 71.42857,-1.4286 42.85715,-267.14281 -81.42857,1.42857 5.71428,230 -55.71428,-260 z"
-       id="path3868"
-       inkscape:connector-curvature="0" />
-    <path
-       style="fill:none;stroke:#ffffff;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
-       d="m 912.85715,496.6479 -8.57143,297.14287 60,-32.85715 -18.57142,-120 17.14285,0 94.28585,147.14286 67.1428,-2.85715 -125.71436,-207.14286 15.71436,-68.57143 z"
-       id="path3918"
-       inkscape:connector-curvature="0"
-       sodipodi:nodetypes="cccccccccc" />
-    <path
-       style="fill:none;stroke:#ffffff;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
-       d="m 941.50911,573.9181 -2.84287,-38.60397 37.77501,0.27912 -3.66053,42.38842 z"
-       id="path3924"
-       inkscape:connector-curvature="0"
-       sodipodi:nodetypes="ccccc" />
-    <path
-       style="fill:none;stroke:#ffffff;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
-       d="M 274.28571,516.6479 270,778.07647 328.57143,770.93361 291.42857,516.6479 z"
-       id="path3974"
-       inkscape:connector-curvature="0" />
-    <path
-       style="fill:none;stroke:#ffffff;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
-       d="M 491.42857,556.6479 480,515.21933 l -90,7.14286 -31.42857,248.57143 140,2.85714 14.28572,-54.28572 -38.57143,-11.42857 -10,38.57143 -67.14286,-5.71428 27.14286,-191.42858 z"
-       id="path3976"
-       inkscape:connector-curvature="0" />
-    <path
-       style="fill:none;stroke:#ffffff;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
-       d="m 518.57143,526.6479 5.71429,38.57142 70,-2.85714 -17.14286,224.28572 58.57143,-18.57143 -20,-204.28572 55.71429,12.85715 -15.71429,-58.57143 z"
-       id="path3978"
-       inkscape:connector-curvature="0" />
-    <path
-       style="fill:none;stroke:#ffffff;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
-       d="m 1088.5715,523.79076 9.9999,62.85714 45.7143,41.42857 15.7143,160 75.7143,5.71429 -50,-160 54.2857,-45.71429 4.2857,-80 -42.8571,18.57143 -12.8572,58.57143 -22.8571,17.14286 -31.4286,-32.85715 L 1130,502.36219 z"
-       id="path3980"
-       inkscape:connector-curvature="0" />
-  </g>
-</svg>
-
-
+    <svg width="1280" height="600">
+      <g transform="translate(0,-452.36218)" style="fill:none;stroke:#ffffff">
+        <path d="m 705.71429,522.36219 -11.42857,264.2857 180,-21.4286 -24.28571,-269.99996 z"/>
+        <path d="m 774.28572,559.50505 -47.14286,145.71428 90,15.71429 18.57143,-111.42857 z"/>
+        <path d="M 54.28572,518.07647 110,780.9336 l 71.42857,-1.4286 42.85715,-267.14281 -81.42857,1.42857 5.71428,230 -55.71428,-260 z"/>
+        <path d="m 912.85715,496.6479 -8.57143,297.14287 60,-32.85715 -18.57142,-120 17.14285,0 94.28585,147.14286 67.1428,-2.85715 -125.71436,-207.14286 15.71436,-68.57143 z"/>
+        <path d="m 941.50911,573.9181 -2.84287,-38.60397 37.77501,0.27912 -3.66053,42.38842 z"/>
+        <path d="M 274.28571,516.6479 270,778.07647 328.57143,770.93361 291.42857,516.6479 z"/>
+        <path d="M 491.42857,556.6479 480,515.21933 l -90,7.14286 -31.42857,248.57143 140,2.85714 14.28572,-54.28572 -38.57143,-11.42857 -10,38.57143 -67.14286,-5.71428 27.14286,-191.42858 z"/>
+        <path d="m 518.57143,526.6479 5.71429,38.57142 70,-2.85714 -17.14286,224.28572 58.57143,-18.57143 -20,-204.28572 55.71429,12.85715 -15.71429,-58.57143 z"/>
+        <path d="m 1088.5715,523.79076 9.9999,62.85714 45.7143,41.42857 15.7143,160 75.7143,5.71429 -50,-160 54.2857,-45.71429 4.2857,-80 -42.8571,18.57143 -12.8572,58.57143 -22.8571,17.14286 -31.4286,-32.85715 L 1130,502.36219 z">
+      </g>
+    </svg>
 	</div>
-	<a href="Game.html" class="retry-button">Start New Game</a>
+	<a href="index.html" class="retry-button buttons">Retry</a>
 	<script>
 		var container = document.getElementById('svg-container');
-
 	</script>
 </body>
 </html>
