--- a/Game.html
+++ b/Game.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Canvas game</title>
+	<title>Space Defender</title>
 	<link href="styles/style.css" rel="stylesheet" />
 </head>
 
-<body>
+<body id="game">
 	<div id="container"></div>
 	<script src="libs/kineticjs/kinetic.min.js"></script>
 	<script src="libs/jquery/jquery-1.10.1.min.js"></script>
