Some enemies exploding

--- a/Game.html
+++ b/Game.html
@@ -17,6 +17,7 @@
 	<script src="scripts/enemyBullets.js"></script>
 	<script src="scripts/Score.js"></script>
 	<script src="scripts/Bonus.js"></script>
+    <script src="scripts/ExploadingParts.js"></script>
 </body>
 
 </html>
