added sfx & music & sound triggers

--- a/Game.html
+++ b/Game.html
@@ -18,6 +18,10 @@
 	<script src="scripts/Score.js"></script>
 	<script src="scripts/Bonus.js"></script>
     <script src="scripts/ExploadingParts.js"></script>
+    <audio src="snd/fire.wav" id="fire" preload />
+    <audio src="snd/medkit_pickup.wav" id="medikit" preload />
+    <audio src="snd/bonus.wav" id="bonus" preload />
+    <audio src="snd/boom2.wav" id="boom" preload />
 </body>
 
 </html>
