more sfx & triggers added

--- a/Game.html
+++ b/Game.html
@@ -22,6 +22,8 @@
     <audio src="snd/medkit_pickup.wav" id="medikit" preload />
     <audio src="snd/bonus.wav" id="bonus" preload />
     <audio src="snd/boom2.wav" id="boom" preload />
+    <audio src="snd/gameplay.mp3" id="theme" preload />
+    <audio src="snd/enemyshoot.wav" id="enemyfire" preload />
 </body>
 
 </html>
