added enemydead sfx
not sure if this should be implemented, because it cancels some of the
triggers on the other sfx.

--- a/Game.html
+++ b/Game.html
@@ -24,6 +24,7 @@
     <audio src="snd/boom2.wav" id="boom" preload />
     <audio src="snd/gameplay.mp3" id="theme" preload />
     <audio src="snd/enemyshoot.wav" id="enemyfire" preload />
+    <audio src="snd/enemydead.wav" id="enemydead" preload />
 </body>
 
 </html>
