credits.html added Alter win condition to 50 enemies down Documentation added Some minor changes on css and view

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body id="mainPage">
 	<div id="svg-container">
-		<svg width="1280" height="600" style="fill:white;stroke:white">
+		<svg width="1280" height="500" style="fill:white;stroke:white">
 		  <g transform="translate(0,-452.36218)">
 		    <g>
 		      	<path
@@ -57,7 +57,7 @@
 	</div>
 	<a href="Game.html" class="retry-button buttons" onmouseover="playSound()">Start New Game</a>
 	<a href="howtopage.html" class="how-to-button buttons" onmouseover="playSound()">How to Play</a>
-	<a href="#" class="mp-button buttons" onmouseover="playSound()">Credits</a>
+	<a href="credits.html" class="mp-button buttons" onmouseover="playSound()">Credits</a>
 	<audio src="snd/menuselect.wav" id="menu" preload />
 	<audio src="snd/mooncrystals.mp3" id="theme" preload />
 	<script>
