--- a/Game.html
+++ b/Game.html
@@ -9,15 +9,15 @@
 	<div id="container"></div>
 	<script src="libs/kineticjs/kinetic.min.js"></script>
 	<script src="libs/jquery/jquery-1.10.1.min.js"></script>
-	<script src="scripts/Game.js"></script>	
-	<script src="scripts/Player.js"></script>	
-	<script src="scripts/Bullets.js"></script>
-	<script src="scripts/Enemies.js"></script>
-	<script src="scripts/Movement.js"></script>
+	<script src="scripts/game.js"></script>	
+	<script src="scripts/player.js"></script>	
+	<script src="scripts/bullets.js"></script>
+	<script src="scripts/enemies.js"></script>
+	<script src="scripts/movement.js"></script>
 	<script src="scripts/enemyBullets.js"></script>
-	<script src="scripts/Score.js"></script>
-	<script src="scripts/Bonus.js"></script>
-    <script src="scripts/ExploadingParts.js"></script>
+	<script src="scripts/score.js"></script>
+	<script src="scripts/bonus.js"></script>
+    <script src="scripts/exploadingParts.js"></script>
     <audio src="snd/fire.wav" id="fire" preload />
     <audio src="snd/medkit_pickup.wav" id="medikit" preload />
     <audio src="snd/bonus.wav" id="bonus" preload />
